cross val checkpoint

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -390,9 +390,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -418,31 +418,40 @@
     "def activation_layer(input_layer):\n",
     "    return tf.sigmoid(input_layer)\n",
     "    \n",
-    "def LeNet(x, keep_prob, conv_keep_prob): \n",
-    "    # Output = 14 x 14 x 25\n",
-    "    conv1 = conv_layer(x, [5,5,3,25])\n",
+    "# def LeNet(x, keep_prob, conv_keep_prob): \n",
+    "#     # Output = 14 x 14 x 25\n",
+    "#     conv1 = conv_layer(x, [5,5,3,25])\n",
+    "#     conv1_activated = activation_layer(conv1)\n",
+    "#     conv1_pooled = maxpool(conv1_activated)\n",
+    "#     conv1_dropped = tf.nn.dropout(conv1_pooled, conv_keep_prob)\n",
+    "    \n",
+    "#     # Output = 5 x 5 x 150\n",
+    "#     conv2 = conv_layer(conv1_dropped, [5,5,25,150])\n",
+    "#     conv2_activated = activation_layer(conv2)\n",
+    "#     conv2_pooled = maxpool(conv2_activated)\n",
+    "#     conv2_dropped = tf.nn.dropout(conv2_pooled, conv_keep_prob)\n",
+    "    \n",
+    "#     fc1_input = flatten(conv2_pooled)\n",
+    "#     fc1_output = fully_connected_layer(fc1_input, (3750, 500))\n",
+    "#     fc1_activated = activation_layer(fc1_output)\n",
+    "#     fc1_dropped = tf.nn.dropout(fc1_activated, keep_prob)\n",
+    "    \n",
+    "#     fc2_output = fully_connected_layer(fc1_dropped, (500, 250))\n",
+    "#     fc2_activated = activation_layer(fc2_output)\n",
+    "#     fc2_dropped = tf.nn.dropout(fc2_activated, keep_prob)\n",
+    "    \n",
+    "#     logits = fully_connected_layer(fc2_dropped, (250, 43))\n",
+    "    \n",
+    "#     return logits\n",
+    "\n",
+    "def LeNet(x, keep_prob, conv_keep_prob):\n",
+    "    conv1 = conv_layer(x, [5,5,3,6])\n",
     "    conv1_activated = activation_layer(conv1)\n",
     "    conv1_pooled = maxpool(conv1_activated)\n",
-    "    conv1_dropped = tf.nn.dropout(conv1_pooled, conv_keep_prob)\n",
     "    \n",
-    "    # Output = 5 x 5 x 150\n",
-    "    conv2 = conv_layer(conv1_dropped, [5,5,25,150])\n",
-    "    conv2_activated = activation_layer(conv2)\n",
-    "    conv2_pooled = maxpool(conv2_activated)\n",
-    "    conv2_dropped = tf.nn.dropout(conv2_pooled, conv_keep_prob)\n",
-    "    \n",
-    "    fc1_input = flatten(conv2_pooled)\n",
-    "    fc1_output = fully_connected_layer(fc1_input, (3750, 500))\n",
-    "    fc1_activated = activation_layer(fc1_output)\n",
-    "    fc1_dropped = tf.nn.dropout(fc1_activated, keep_prob)\n",
-    "    \n",
-    "    fc2_output = fully_connected_layer(fc1_dropped, (500, 250))\n",
-    "    fc2_activated = activation_layer(fc2_output)\n",
-    "    fc2_dropped = tf.nn.dropout(fc2_activated, keep_prob)\n",
-    "    \n",
-    "    logits = fully_connected_layer(fc2_dropped, (250, 43))\n",
-    "    \n",
-    "    return logits\n",
+    "    fc1_input = flatten(conv1_pooled)\n",
+    "    fc1_output = fully_connected_layer(fc1_input, (1176, 43))\n",
+    "    return fc1_output\n",
     "\n",
     "def evaluate(X_data, y_data):\n",
     "    num_examples = len(X_data)\n",
@@ -475,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -489,27 +498,11 @@
       "\n",
       "EPOCH 1 ...\n"
      ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-3de77db36f6c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m                     \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moffset\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mBATCH_SIZE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m                     \u001b[0mbatch_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_y\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX_sub_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moffset\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_sub_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moffset\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m                     \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_operation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbatch_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbatch_y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeep_prob\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mKEEP_PROB\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconv_keep_prob\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mCONV_KEEP_PROB\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m                 \u001b[0mtrain_accuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_sub_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_sub_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m                 \u001b[0mval_accuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/kedar/miniconda3/envs/CarND-Traffic-Sign-Classifier-Project/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    764\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    765\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 766\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    767\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    768\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/kedar/miniconda3/envs/CarND-Traffic-Sign-Classifier-Project/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    962\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    963\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m--> 964\u001b[0;31m                              feed_dict_string, options, run_metadata)\n\u001b[0m\u001b[1;32m    965\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    966\u001b[0m       \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/kedar/miniconda3/envs/CarND-Traffic-Sign-Classifier-Project/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1012\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1013\u001b[0m       return self._do_call(_run_fn, self._session, feed_dict, fetch_list,\n\u001b[0;32m-> 1014\u001b[0;31m                            target_list, options, run_metadata)\n\u001b[0m\u001b[1;32m   1015\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1016\u001b[0m       return self._do_call(_prun_fn, self._session, handle, feed_dict,\n",
-      "\u001b[0;32m/home/kedar/miniconda3/envs/CarND-Traffic-Sign-Classifier-Project/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_call\u001b[0;34m(self, fn, *args)\u001b[0m\n\u001b[1;32m   1019\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1020\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1021\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1022\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1023\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/kedar/miniconda3/envs/CarND-Traffic-Sign-Classifier-Project/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run_fn\u001b[0;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[1;32m   1001\u001b[0m         return tf_session.TF_Run(session, options,\n\u001b[1;32m   1002\u001b[0m                                  \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1003\u001b[0;31m                                  status, run_metadata)\n\u001b[0m\u001b[1;32m   1004\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1005\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
     }
    ],
    "source": [
     "if flags['train_network']: \n",
-    "    with tf.Session(config=tf.ConfigProto(log_device_placement=True)) as sess:\n",
+    "    with tf.Session() as sess:\n",
     "        sess.run(tf.global_variables_initializer())\n",
     "        num_examples = len(X_train)\n",
     "\n",
@@ -520,8 +513,8 @@
     "            train_accuracies = []\n",
     "            val_accuracies = []\n",
     "            X_train, y_train = sklearn.utils.shuffle(X_train, y_train)\n",
-    "            kf = sklearn.model_selection.StratifiedKFold(n_splits=3)\n",
-    "            for j, (sub_train, val) in enumerate(kf.split(X_train, y_train)):\n",
+    "            kf = sklearn.model_selection.KFold(n_splits=3)\n",
+    "            for sub_train, val in kf.split(X_train):\n",
     "                X_sub_train, X_val, y_sub_train, y_val = X_train[sub_train], X_train[val], y_train[sub_train], y_train[val]\n",
     "                for offset in range(0, num_examples, BATCH_SIZE):\n",
     "                    end = offset + BATCH_SIZE\n",
@@ -531,7 +524,7 @@
     "                val_accuracy = evaluate(X_val, y_val)\n",
     "                train_accuracies.append(train_accuracy)\n",
     "                val_accuracies.append(val_accuracy)\n",
-    "                print(\"CV {}\".format(j+1))\n",
+    "                print(\"---CV---\")\n",
     "                print(\"Train Accuracy = {:.3f}\".format(train_accuracy))\n",
     "                print(\"Validation Accuracy = {:.3f}\".format(val_accuracy))\n",
     "            print(\"Averaged CVs: Train Accuracy = {:.3f}\".format(np.mean(train_accuracies)))\n",
