--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -45,11 +45,11 @@
     "    'generate_color_images': False,\n",
     "    'generate_grayscale_images': False,\n",
     "    'train_network': True,\n",
-    "    'evaluate_test_accuracy': False\n",
+    "    'evaluate_test_accuracy': True\n",
     "}\n",
     "\n",
     "# HyperParameters for Training\n",
-    "EPOCHS = 10\n",
+    "EPOCHS = 5\n",
     "BATCH_SIZE = 128\n",
     "MU = 0\n",
     "SIGMA = 0.1\n",
@@ -337,10 +337,9 @@
    "source": [
     "X_train, y_train = sklearn.utils.shuffle(X_train, y_train)\n",
     "\n",
-    "# Split test data set into half validation, half test\n",
-    "kf = KFold(n_splits=5)\n",
-    "for sub_train, val in kf.split(X_train):\n",
-    "    X_sub_train, X_val, y_sub_train, y_val = X_train[sub_train], X_train[val], y_train[sub_train], y_train[val]"
+    "# kf = KFold(n_splits=5)\n",
+    "# for sub_train, val in kf.split(X_train):\n",
+    "#     X_sub_train, X_val, y_sub_train, y_val = X_train[sub_train], X_train[val], y_train[sub_train], y_train[val]"
    ]
   },
   {
@@ -390,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -418,40 +417,31 @@
     "def activation_layer(input_layer):\n",
     "    return tf.sigmoid(input_layer)\n",
     "    \n",
-    "# def LeNet(x, keep_prob, conv_keep_prob): \n",
-    "#     # Output = 14 x 14 x 25\n",
-    "#     conv1 = conv_layer(x, [5,5,3,25])\n",
-    "#     conv1_activated = activation_layer(conv1)\n",
-    "#     conv1_pooled = maxpool(conv1_activated)\n",
-    "#     conv1_dropped = tf.nn.dropout(conv1_pooled, conv_keep_prob)\n",
-    "    \n",
-    "#     # Output = 5 x 5 x 150\n",
-    "#     conv2 = conv_layer(conv1_dropped, [5,5,25,150])\n",
-    "#     conv2_activated = activation_layer(conv2)\n",
-    "#     conv2_pooled = maxpool(conv2_activated)\n",
-    "#     conv2_dropped = tf.nn.dropout(conv2_pooled, conv_keep_prob)\n",
-    "    \n",
-    "#     fc1_input = flatten(conv2_pooled)\n",
-    "#     fc1_output = fully_connected_layer(fc1_input, (3750, 500))\n",
-    "#     fc1_activated = activation_layer(fc1_output)\n",
-    "#     fc1_dropped = tf.nn.dropout(fc1_activated, keep_prob)\n",
-    "    \n",
-    "#     fc2_output = fully_connected_layer(fc1_dropped, (500, 250))\n",
-    "#     fc2_activated = activation_layer(fc2_output)\n",
-    "#     fc2_dropped = tf.nn.dropout(fc2_activated, keep_prob)\n",
-    "    \n",
-    "#     logits = fully_connected_layer(fc2_dropped, (250, 43))\n",
-    "    \n",
-    "#     return logits\n",
-    "\n",
-    "def LeNet(x, keep_prob, conv_keep_prob):\n",
-    "    conv1 = conv_layer(x, [5,5,3,6])\n",
+    "def LeNet(x, keep_prob, conv_keep_prob): \n",
+    "    # Output = 14 x 14 x 25\n",
+    "    conv1 = conv_layer(x, [5,5,3,25])\n",
     "    conv1_activated = activation_layer(conv1)\n",
     "    conv1_pooled = maxpool(conv1_activated)\n",
+    "    conv1_dropped = tf.nn.dropout(conv1_pooled, conv_keep_prob)\n",
     "    \n",
-    "    fc1_input = flatten(conv1_pooled)\n",
-    "    fc1_output = fully_connected_layer(fc1_input, (1176, 43))\n",
-    "    return fc1_output\n",
+    "    # Output = 5 x 5 x 150\n",
+    "    conv2 = conv_layer(conv1_dropped, [5,5,25,150])\n",
+    "    conv2_activated = activation_layer(conv2)\n",
+    "    conv2_pooled = maxpool(conv2_activated)\n",
+    "    conv2_dropped = tf.nn.dropout(conv2_pooled, conv_keep_prob)\n",
+    "    \n",
+    "    fc1_input = flatten(conv2_pooled)\n",
+    "    fc1_output = fully_connected_layer(fc1_input, (3750, 500))\n",
+    "    fc1_activated = activation_layer(fc1_output)\n",
+    "    fc1_dropped = tf.nn.dropout(fc1_activated, keep_prob)\n",
+    "    \n",
+    "    fc2_output = fully_connected_layer(fc1_dropped, (500, 250))\n",
+    "    fc2_activated = activation_layer(fc2_output)\n",
+    "    fc2_dropped = tf.nn.dropout(fc2_activated, keep_prob)\n",
+    "    \n",
+    "    logits = fully_connected_layer(fc2_dropped, (250, 43))\n",
+    "    \n",
+    "    return logits\n",
     "\n",
     "def evaluate(X_data, y_data):\n",
     "    num_examples = len(X_data)\n",
@@ -484,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -496,7 +486,72 @@
      "text": [
       "Training...\n",
       "\n",
-      "EPOCH 1 ...\n"
+      "EPOCH 1 ...\n",
+      "CV 1\n",
+      "Train Accuracy = 0.539\n",
+      "Validation Accuracy = 0.536\n",
+      "CV 2\n",
+      "Train Accuracy = 0.950\n",
+      "Validation Accuracy = 0.947\n",
+      "CV 3\n",
+      "Train Accuracy = 0.986\n",
+      "Validation Accuracy = 0.984\n",
+      "Averaged CVs: Train Accuracy = 0.825\n",
+      "Averaged CVs: Validation Accuracy = 0.823\n",
+      "\n",
+      "EPOCH 2 ...\n",
+      "CV 1\n",
+      "Train Accuracy = 0.993\n",
+      "Validation Accuracy = 0.990\n",
+      "CV 2\n",
+      "Train Accuracy = 0.995\n",
+      "Validation Accuracy = 0.993\n",
+      "CV 3\n",
+      "Train Accuracy = 0.997\n",
+      "Validation Accuracy = 0.997\n",
+      "Averaged CVs: Train Accuracy = 0.995\n",
+      "Averaged CVs: Validation Accuracy = 0.993\n",
+      "\n",
+      "EPOCH 3 ...\n",
+      "CV 1\n",
+      "Train Accuracy = 0.999\n",
+      "Validation Accuracy = 0.997\n",
+      "CV 2\n",
+      "Train Accuracy = 0.999\n",
+      "Validation Accuracy = 0.999\n",
+      "CV 3\n",
+      "Train Accuracy = 0.997\n",
+      "Validation Accuracy = 0.996\n",
+      "Averaged CVs: Train Accuracy = 0.998\n",
+      "Averaged CVs: Validation Accuracy = 0.997\n",
+      "\n",
+      "EPOCH 4 ...\n",
+      "CV 1\n",
+      "Train Accuracy = 0.999\n",
+      "Validation Accuracy = 0.999\n",
+      "CV 2\n",
+      "Train Accuracy = 0.996\n",
+      "Validation Accuracy = 0.994\n",
+      "CV 3\n",
+      "Train Accuracy = 0.997\n",
+      "Validation Accuracy = 0.996\n",
+      "Averaged CVs: Train Accuracy = 0.998\n",
+      "Averaged CVs: Validation Accuracy = 0.996\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "CV 1\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 0.999\n",
+      "CV 2\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "CV 3\n",
+      "Train Accuracy = 0.999\n",
+      "Validation Accuracy = 0.999\n",
+      "Averaged CVs: Train Accuracy = 1.000\n",
+      "Averaged CVs: Validation Accuracy = 0.999\n",
+      "\n",
+      "Model saved\n"
      ]
     }
    ],
@@ -504,7 +559,6 @@
     "if flags['train_network']: \n",
     "    with tf.Session() as sess:\n",
     "        sess.run(tf.global_variables_initializer())\n",
-    "        num_examples = len(X_train)\n",
     "\n",
     "        print(\"Training...\")\n",
     "        print()\n",
@@ -514,8 +568,9 @@
     "            val_accuracies = []\n",
     "            X_train, y_train = sklearn.utils.shuffle(X_train, y_train)\n",
     "            kf = sklearn.model_selection.KFold(n_splits=3)\n",
-    "            for sub_train, val in kf.split(X_train):\n",
+    "            for j, (sub_train, val) in enumerate(kf.split(X_train)):\n",
     "                X_sub_train, X_val, y_sub_train, y_val = X_train[sub_train], X_train[val], y_train[sub_train], y_train[val]\n",
+    "                num_examples = len(X_sub_train)\n",
     "                for offset in range(0, num_examples, BATCH_SIZE):\n",
     "                    end = offset + BATCH_SIZE\n",
     "                    batch_x, batch_y = X_sub_train[offset:end], y_sub_train[offset:end]\n",
@@ -524,7 +579,7 @@
     "                val_accuracy = evaluate(X_val, y_val)\n",
     "                train_accuracies.append(train_accuracy)\n",
     "                val_accuracies.append(val_accuracy)\n",
-    "                print(\"---CV---\")\n",
+    "                print(\"CV {}\".format(j+1))\n",
     "                print(\"Train Accuracy = {:.3f}\".format(train_accuracy))\n",
     "                print(\"Validation Accuracy = {:.3f}\".format(val_accuracy))\n",
     "            print(\"Averaged CVs: Train Accuracy = {:.3f}\".format(np.mean(train_accuracies)))\n",
@@ -537,15 +592,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.965\n"
+     ]
+    }
+   ],
    "source": [
     "if flags['evaluate_test_accuracy']:\n",
-    "    test_accuracy = evaluate(X_test, y_test)\n",
-    "    print(\"Test Accuracy: {:.3f}\".format(test_accuracy))"
+    "    with tf.Session() as sess:\n",
+    "        saver.restore(sess, './lenet')     \n",
+    "        test_accuracy = evaluate(X_test, y_test)\n",
+    "        print(\"Test Accuracy: {:.3f}\".format(test_accuracy))"
    ]
   },
   {
@@ -605,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -634,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -664,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
