--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -38,8 +38,8 @@
     "# This way you can use the \"Run Cells\" functionality for one-click execution, \n",
     "# but only execute the parts you want\n",
     "\n",
-    "training_file = 'train.p'\n",
-    "testing_file = 'test.p'\n",
+    "training_file = 'train_grayscale.p'\n",
+    "testing_file = 'test_grayscale.p'\n",
     "flags = {\n",
     "    'show_plots': False, \n",
     "    'generate_color_images': False,\n",
@@ -49,7 +49,7 @@
     "}\n",
     "\n",
     "# HyperParameters for Training\n",
-    "EPOCHS = 5\n",
+    "EPOCHS = 8\n",
     "BATCH_SIZE = 128\n",
     "MU = 0\n",
     "SIGMA = 0.1\n",
@@ -283,7 +283,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -419,7 +419,8 @@
     "    \n",
     "def LeNet(x, keep_prob, conv_keep_prob): \n",
     "    # Output = 14 x 14 x 25\n",
-    "    conv1 = conv_layer(x, [5,5,3,25])\n",
+    "    x = tf.reshape(x, (-1, 32, 32, 1))\n",
+    "    conv1 = conv_layer(x, [5,5,1,25])\n",
     "    conv1_activated = activation_layer(conv1)\n",
     "    conv1_pooled = maxpool(conv1_activated)\n",
     "    conv1_dropped = tf.nn.dropout(conv1_pooled, conv_keep_prob)\n",
@@ -454,7 +455,7 @@
     "    return total_accuracy / num_examples\n",
     "\n",
     "# Setup Variables\n",
-    "x = tf.placeholder(tf.float32, (None, 32, 32, 3))\n",
+    "x = tf.placeholder(tf.float32, (None, 32, 32))\n",
     "y = tf.placeholder(tf.int32, (None))\n",
     "keep_prob = tf.placeholder(tf.float32)\n",
     "conv_keep_prob = tf.placeholder(tf.float32)\n",
@@ -488,68 +489,107 @@
       "\n",
       "EPOCH 1 ...\n",
       "CV 1\n",
-      "Train Accuracy = 0.539\n",
-      "Validation Accuracy = 0.536\n",
+      "Train Accuracy = 0.694\n",
+      "Validation Accuracy = 0.690\n",
       "CV 2\n",
-      "Train Accuracy = 0.950\n",
-      "Validation Accuracy = 0.947\n",
+      "Train Accuracy = 0.958\n",
+      "Validation Accuracy = 0.953\n",
       "CV 3\n",
-      "Train Accuracy = 0.986\n",
+      "Train Accuracy = 0.987\n",
       "Validation Accuracy = 0.984\n",
-      "Averaged CVs: Train Accuracy = 0.825\n",
-      "Averaged CVs: Validation Accuracy = 0.823\n",
+      "Averaged CVs: Train Accuracy = 0.880\n",
+      "Averaged CVs: Validation Accuracy = 0.875\n",
       "\n",
       "EPOCH 2 ...\n",
       "CV 1\n",
-      "Train Accuracy = 0.993\n",
-      "Validation Accuracy = 0.990\n",
+      "Train Accuracy = 0.994\n",
+      "Validation Accuracy = 0.992\n",
       "CV 2\n",
-      "Train Accuracy = 0.995\n",
-      "Validation Accuracy = 0.993\n",
-      "CV 3\n",
-      "Train Accuracy = 0.997\n",
+      "Train Accuracy = 0.998\n",
       "Validation Accuracy = 0.997\n",
-      "Averaged CVs: Train Accuracy = 0.995\n",
-      "Averaged CVs: Validation Accuracy = 0.993\n",
+      "CV 3\n",
+      "Train Accuracy = 0.999\n",
+      "Validation Accuracy = 0.998\n",
+      "Averaged CVs: Train Accuracy = 0.997\n",
+      "Averaged CVs: Validation Accuracy = 0.996\n",
       "\n",
       "EPOCH 3 ...\n",
       "CV 1\n",
-      "Train Accuracy = 0.999\n",
-      "Validation Accuracy = 0.997\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 0.998\n",
       "CV 2\n",
-      "Train Accuracy = 0.999\n",
+      "Train Accuracy = 1.000\n",
       "Validation Accuracy = 0.999\n",
       "CV 3\n",
-      "Train Accuracy = 0.997\n",
-      "Validation Accuracy = 0.996\n",
-      "Averaged CVs: Train Accuracy = 0.998\n",
-      "Averaged CVs: Validation Accuracy = 0.997\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "Averaged CVs: Train Accuracy = 1.000\n",
+      "Averaged CVs: Validation Accuracy = 0.999\n",
       "\n",
       "EPOCH 4 ...\n",
       "CV 1\n",
-      "Train Accuracy = 0.999\n",
-      "Validation Accuracy = 0.999\n",
-      "CV 2\n",
-      "Train Accuracy = 0.996\n",
-      "Validation Accuracy = 0.994\n",
-      "CV 3\n",
-      "Train Accuracy = 0.997\n",
-      "Validation Accuracy = 0.996\n",
-      "Averaged CVs: Train Accuracy = 0.998\n",
-      "Averaged CVs: Validation Accuracy = 0.996\n",
-      "\n",
-      "EPOCH 5 ...\n",
-      "CV 1\n",
       "Train Accuracy = 1.000\n",
-      "Validation Accuracy = 0.999\n",
+      "Validation Accuracy = 1.000\n",
       "CV 2\n",
       "Train Accuracy = 1.000\n",
       "Validation Accuracy = 1.000\n",
       "CV 3\n",
-      "Train Accuracy = 0.999\n",
-      "Validation Accuracy = 0.999\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
       "Averaged CVs: Train Accuracy = 1.000\n",
-      "Averaged CVs: Validation Accuracy = 0.999\n",
+      "Averaged CVs: Validation Accuracy = 1.000\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "CV 1\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "CV 2\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "CV 3\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "Averaged CVs: Train Accuracy = 1.000\n",
+      "Averaged CVs: Validation Accuracy = 1.000\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "CV 1\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "CV 2\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "CV 3\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "Averaged CVs: Train Accuracy = 1.000\n",
+      "Averaged CVs: Validation Accuracy = 1.000\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "CV 1\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "CV 2\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "CV 3\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "Averaged CVs: Train Accuracy = 1.000\n",
+      "Averaged CVs: Validation Accuracy = 1.000\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "CV 1\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "CV 2\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "CV 3\n",
+      "Train Accuracy = 1.000\n",
+      "Validation Accuracy = 1.000\n",
+      "Averaged CVs: Train Accuracy = 1.000\n",
+      "Averaged CVs: Validation Accuracy = 1.000\n",
       "\n",
       "Model saved\n"
      ]
@@ -601,7 +641,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.965\n"
+      "Test Accuracy: 0.973\n"
      ]
     }
    ],
@@ -796,15 +836,6 @@
     "> **Note**: Once you have completed all of the code implementations and successfully answered each question above, you may finalize your work by exporting the iPython Notebook as an HTML document. You can do this by using the menu above and navigating to  \\n\",\n",
     "    \"**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
