add cross val flag

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -45,6 +45,7 @@
     "    'generate_color_images': False,\n",
     "    'generate_grayscale_images': False,\n",
     "    'train_network': True,\n",
+    "    'train_cross_val': True,\n",
     "    'evaluate_test_accuracy': True\n",
     "}\n",
     "\n",
@@ -62,7 +63,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -74,7 +75,7 @@
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "import sklearn\n",
-    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import StratifiedKFold, train_test_split\n",
     "%matplotlib inline"
    ]
   },
@@ -328,18 +329,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "X_train, y_train = sklearn.utils.shuffle(X_train, y_train)\n",
-    "\n",
-    "# kf = KFold(n_splits=5)\n",
-    "# for sub_train, val in kf.split(X_train):\n",
-    "#     X_sub_train, X_val, y_sub_train, y_val = X_train[sub_train], X_train[val], y_train[sub_train], y_train[val]"
+    "I converted both the test and train data to grayscale because that did better on the validation set than the color images. I didn't do any data splitting or shuffling here because I used cross validation with StratifiedKFold later on"
    ]
   },
   {
@@ -359,37 +352,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "### Define your architecture here.\n",
-    "### Feel free to use as many code cells as needed."
+    "I used cross validation to create 3 stratified, random folds for training in each epoch. I did generate a bunch of jittered images and the code to do so is up there in the preprocessing, but the picture generation had a negligible effect on the final result, so I excluded it from the writeup. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 3\n",
-    "\n",
-    "_What does your final architecture look like? (Type of model, layers, sizes, connectivity, etc.)  For reference on how to build a deep neural network using TensorFlow, see [Deep Neural Network in TensorFlow\n",
-    "](https://classroom.udacity.com/nanodegrees/nd013/parts/fbf77062-5703-404e-b60c-95b78b2f3f9e/modules/6df7ae49-c61c-4bb2-a23e-6527e69209ec/lessons/b516a270-8600-4f93-a0a3-20dfeabe5da6/concepts/83a3a2a2-a9bd-4b7b-95b0-eb924ab14432) from the classroom._\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Answer:**"
+    "#### Code:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -475,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -489,29 +467,29 @@
       "\n",
       "EPOCH 1 ...\n",
       "CV 1\n",
-      "Train Accuracy = 0.694\n",
-      "Validation Accuracy = 0.690\n",
+      "Train Accuracy = 0.427\n",
+      "Validation Accuracy = 0.428\n",
       "CV 2\n",
-      "Train Accuracy = 0.958\n",
-      "Validation Accuracy = 0.953\n",
+      "Train Accuracy = 0.947\n",
+      "Validation Accuracy = 0.941\n",
       "CV 3\n",
-      "Train Accuracy = 0.987\n",
-      "Validation Accuracy = 0.984\n",
-      "Averaged CVs: Train Accuracy = 0.880\n",
-      "Averaged CVs: Validation Accuracy = 0.875\n",
+      "Train Accuracy = 0.975\n",
+      "Validation Accuracy = 0.971\n",
+      "Averaged CVs: Train Accuracy = 0.783\n",
+      "Averaged CVs: Validation Accuracy = 0.780\n",
       "\n",
       "EPOCH 2 ...\n",
       "CV 1\n",
-      "Train Accuracy = 0.994\n",
+      "Train Accuracy = 0.995\n",
       "Validation Accuracy = 0.992\n",
       "CV 2\n",
       "Train Accuracy = 0.998\n",
-      "Validation Accuracy = 0.997\n",
+      "Validation Accuracy = 0.995\n",
       "CV 3\n",
-      "Train Accuracy = 0.999\n",
-      "Validation Accuracy = 0.998\n",
+      "Train Accuracy = 0.997\n",
+      "Validation Accuracy = 0.996\n",
       "Averaged CVs: Train Accuracy = 0.997\n",
-      "Averaged CVs: Validation Accuracy = 0.996\n",
+      "Averaged CVs: Validation Accuracy = 0.995\n",
       "\n",
       "EPOCH 3 ...\n",
       "CV 1\n",
@@ -519,7 +497,7 @@
       "Validation Accuracy = 0.998\n",
       "CV 2\n",
       "Train Accuracy = 1.000\n",
-      "Validation Accuracy = 0.999\n",
+      "Validation Accuracy = 1.000\n",
       "CV 3\n",
       "Train Accuracy = 1.000\n",
       "Validation Accuracy = 1.000\n",
@@ -529,7 +507,7 @@
       "EPOCH 4 ...\n",
       "CV 1\n",
       "Train Accuracy = 1.000\n",
-      "Validation Accuracy = 1.000\n",
+      "Validation Accuracy = 0.999\n",
       "CV 2\n",
       "Train Accuracy = 1.000\n",
       "Validation Accuracy = 1.000\n",
@@ -596,7 +574,7 @@
     }
    ],
    "source": [
-    "if flags['train_network']: \n",
+    "if flags['train_network'] and flags['train_cross_val']: \n",
     "    with tf.Session() as sess:\n",
     "        sess.run(tf.global_variables_initializer())\n",
     "\n",
@@ -607,8 +585,8 @@
     "            train_accuracies = []\n",
     "            val_accuracies = []\n",
     "            X_train, y_train = sklearn.utils.shuffle(X_train, y_train)\n",
-    "            kf = sklearn.model_selection.KFold(n_splits=3)\n",
-    "            for j, (sub_train, val) in enumerate(kf.split(X_train)):\n",
+    "            kf = sklearn.model_selection.StratifiedKFold(n_splits=3)\n",
+    "            for j, (sub_train, val) in enumerate(kf.split(X_train, y_train)):\n",
     "                X_sub_train, X_val, y_sub_train, y_val = X_train[sub_train], X_train[val], y_train[sub_train], y_train[val]\n",
     "                num_examples = len(X_sub_train)\n",
     "                for offset in range(0, num_examples, BATCH_SIZE):\n",
@@ -632,7 +610,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "if flags['train_network'] and not flags['train_cross_val']:\n",
+    "    X_sub_train, X_val, y_sub_train, y_val = train_test_split(X_train, y_train)\n",
+    "    num_examples = len(X_sub_train)\n",
+    "    with tf.Session() as sess:\n",
+    "        sess.run(tf.global_variables_initializer())\n",
+    "        print(\"Training...\")\n",
+    "        print()\n",
+    "        for i in range(EPOCHS):\n",
+    "            print(\"EPOCH {} ...\".format(i+1))\n",
+    "            X_sub_train, y_sub_train = sklearn.utils.shuffle(X_sub_train, y_sub_train)\n",
+    "            for offset in range(0, num_examples, BATCH_SIZE):\n",
+    "                end = offset + BATCH_SIZE\n",
+    "                batch_x, batch_y = X_sub_train[offset:end], y_sub_train[offset:end]\n",
+    "                sess.run(training_operation, feed_dict={x: batch_x, y: batch_y, keep_prob: KEEP_PROB, conv_keep_prob: CONV_KEEP_PROB})\n",
+    "            train_accuracy = evaluate(X_sub_train, y_sub_train)\n",
+    "            val_accuracy = evaluate(X_val, y_val)\n",
+    "            print(\"Train Accuracy = {:.3f}\".format(train_accuracy))\n",
+    "            print(\"Validation Accuracy = {:.3f}\".format(val_accuracy))\n",
+    "            print()\n",
+    "\n",
+    "        saver.save(sess, 'lenet')\n",
+    "        print(\"Model saved\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -641,7 +651,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.973\n"
+      "Test Accuracy: 0.969\n"
      ]
     }
    ],
@@ -651,6 +661,30 @@
     "        saver.restore(sess, './lenet')     \n",
     "        test_accuracy = evaluate(X_test, y_test)\n",
     "        print(\"Test Accuracy: {:.3f}\".format(test_accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 3\n",
+    "\n",
+    "_What does your final architecture look like? (Type of model, layers, sizes, connectivity, etc.)  For reference on how to build a deep neural network using TensorFlow, see [Deep Neural Network in TensorFlow\n",
+    "](https://classroom.udacity.com/nanodegrees/nd013/parts/fbf77062-5703-404e-b60c-95b78b2f3f9e/modules/6df7ae49-c61c-4bb2-a23e-6527e69209ec/lessons/b516a270-8600-4f93-a0a3-20dfeabe5da6/concepts/83a3a2a2-a9bd-4b7b-95b0-eb924ab14432) from the classroom._\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My final architecture has 2 convolution layers of size 25 and 150 with max pooling, followed by two fully connected layers of size 500 and 150. Using dropout had no effect, so I left the keep probabilities at 100%. "
    ]
   },
   {
@@ -673,6 +707,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "I stuck with the default AdamOptimizer, 128 count batch size, and .001 learning rate, and changed the number of epochs to 8. Additionally, I had dropout rates that I ended up not having to use. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Question 5\n",
     "\n",
     "\n",
@@ -684,6 +725,13 @@
    "metadata": {},
    "source": [
     "**Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I started off by using the LeNet model and reading up on the baseline model by LeCunn. I then started with LeNet, slowly made the convolution depths larger until accuracy stopped improving, then used grayscale images and tried out dropout. "
    ]
   },
   {
@@ -710,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -739,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -769,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
