revision after 1st submission feedback

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -414,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I converted both the test and train data to grayscale because that did better on the validation set than the color images. I didn't do any data splitting or shuffling here because I used cross validation with StratifiedKFold later on"
+    "I converted both the test and train data to grayscale because that did better on the validation set than the color images. Additionally, I created a bunch of jittered images so that there was 1500 atleast of each label, but it had a negligible effect on the final test accuracy, so I omitted it from this report. I didn't do any data splitting or shuffling here because I used cross validation with StratifiedKFold later on"
    ]
   },
   {
@@ -950,6 +950,13 @@
    "metadata": {},
    "source": [
     "**Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The images are plotted above. The images are taken off the internet, so they were manually cropped and resized by me. In a real network, there would likely be a detection layer that more consistently selects an area around the sign of roughly the same size. My crops are not precise and may have caused the signs to take up more or less pixels than they should."
    ]
   },
   {
